fix unread DM highlight in dark mode

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -25,8 +25,10 @@ html.dark-mode ._1R-qbptt {
 }
 
 /* search lists */
-html.dark-mode ._10lTeTjh {
-	background: #2f3b47 !important;
+html.dark-mode ._10lTeTjh,
+/* unread DM */
+html.dark-mode .ux8RIzeT {
+	background: rgba(255, 255, 255, 0.04);
 }
 
 /* navbar border */
